--- a/index.html
+++ b/index.html
@@ -6,30 +6,57 @@
   <title>Activate Play Mode</title>
   <link rel="manifest" href="manifest.json" />
   <link rel="icon" type="image/png" href="activate-play-mode-icon.png"/>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
   <script defer src="app.js"></script>
-</head>
-<body>
-  <div id="welcome" class="screen">
-    <img src="activate-play-mode-icon.png" alt="Activate Play Mode Logo" class="logo"/>
-    <p class="message">Thanks for supporting this work — please keep this private and do not share. This is for Activate Play Mode customers only.</p>
-    <button onclick="enterApp()">Enter</button>
-  </div>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Poppins', sans-serif;
+      background: #ff56c1;
+      color: #000;
+    }
 
-  <div id="app" class="screen hidden">
-    <h1>Activate Play Mode</h1>
-    <div class="strategy">
-      <button class="collapsible">🎭 Playing the Opposite</button>
-      <div class="content">
-        <p>Pretending to be shocked/scared when your kid does what you want.</p>
-        <ul>
-          <li>“Don’t brush too well or I’ll get scared of your smile!”</li>
-          <li>“If you eat that, I’ll moo like an angry cow!”</li>
-        </ul>
-        <a href="https://www.dropbox.com/scl/fi/dt2fkqf8a9cqo9422ij4m/3-Playing-the-Opposite.MOV?rlkey=ajxyv6bsszyppx4j10z6mkqtg&dl=0" target="_blank">🎥 Watch Example</a>
-      </div>
-    </div>
-    <!-- More strategies can be added here -->
-  </div>
-</body>
-</html>
+    .screen {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 2rem;
+      text-align: center;
+    }
+
+    .logo {
+      width: 100px;
+      margin-bottom: 1rem;
+    }
+
+    h1 {
+      font-size: 1.8rem;
+      margin-bottom: 0.5rem;
+    }
+
+    .message, .instructions {
+      font-size: 1rem;
+      margin-bottom: 1.5rem;
+      max-width: 600px;
+    }
+
+    button {
+      background-color: #00b4d8;
+      color: #fff;
+      border: none;
+      padding: 1rem 1.5rem;
+      font-size: 1rem;
+      cursor: pointer;
+      border-radius: 8px;
+      font-family: 'Poppins', sans-serif;
+    }
+
+    .collapsible {
+      background-color: #0077b6;
+      color: white;
+      cursor: pointer;
+      padding: 1rem;
+      width: 100%;
