--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" />
-  <script defer src="app.js"></script>
   <style>
     body {
       margin: 0;
@@ -60,3 +58,100 @@
       cursor: pointer;
       padding: 1rem;
       width: 100%;
+      border: none;
+      text-align: left;
+      outline: none;
+      font-size: 1.1rem;
+      margin-top: 1rem;
+      border-radius: 6px;
+      font-family: 'Poppins', sans-serif;
+    }
+
+    .content {
+      padding: 0 1rem 1rem;
+      max-height: 0;
+      overflow: hidden;
+      transition: max-height 0.3s ease-out;
+      background: #caf0f8;
+      margin-bottom: 1rem;
+      border-radius: 6px;
+      text-align: left;
+    }
+
+    .content p, .content ul {
+      font-size: 0.95rem;
+    }
+
+    .hidden {
+      display: none;
+    }
+
+    iframe {
+      border: none;
+      border-radius: 6px;
+      margin-top: 1rem;
+    }
+  </style>
+</head>
+<body>
+
+  <div id="welcome" class="screen">
+    <img src="activate-play-mode-icon.png" alt="Activate Play Mode Logo" class="logo"/>
+    <p class="message">Thanks for supporting this work — please keep this private and do not share. This is for Activate Play Mode customers only.</p>
+    <button onclick="enterApp()">Enter</button>
+  </div>
+
+  <div id="app" class="screen hidden">
+    <img src="activate-play-mode-icon.png" alt="Activate Play Mode Logo" class="logo"/>
+    <h1>Activate Play Mode</h1>
+    <p class="instructions">
+      Tap on any strategy below to view a quick summary, playful examples, and a short demo video.<br/>
+      These ideas work best when the stakes are low and the vibe is calm — have fun exploring!
+    </p>
+
+    <div class="strategy">
+      <button class="collapsible">🎭 Playing the Opposite</button>
+      <div class="content">
+        <p><strong>What it is:</strong> Pretending to be shocked, scared, or outraged when your kid does what you actually want them to do.</p>
+        <ul>
+          <li>“Don’t brush too well or I’ll be afraid of your smile!”</li>
+          <li>“Whatever you do, don’t eat that broccoli while I’m not looking…”</li>
+          <li>“Nooo! Don’t start reading that book out loud!”</li>
+        </ul>
+        <p><strong>Why it works:</strong> It flips the script in a way that makes your child feel powerful, funny, and successful — all while doing the very thing they were resisting.</p>
+        <iframe src="https://www.dropbox.com/scl/fi/dt2fkqf8a9cqo9422ij4m/3-Playing-the-Opposite.MOV?rlkey=ajxyv6bsszyppx4j10z6mkqtg&raw=1"
+                width="100%" height="250" allowfullscreen></iframe>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    function enterApp() {
+      localStorage.setItem("apmUserVerified", "true");
+      document.getElementById("welcome").classList.add("hidden");
+      document.getElementById("app").classList.remove("hidden");
+    }
+
+    document.addEventListener("DOMContentLoaded", function () {
+      const hasAccess = localStorage.getItem("apmUserVerified") === "true";
+      if (hasAccess) {
+        document.getElementById("welcome").classList.add("hidden");
+        document.getElementById("app").classList.remove("hidden");
+      }
+
+      const collapsibles = document.querySelectorAll(".collapsible");
+      collapsibles.forEach(button => {
+        button.addEventListener("click", function () {
+          this.classList.toggle("active");
+          const content = this.nextElementSibling;
+          if (content.style.maxHeight) {
+            content.style.maxHeight = null;
+          } else {
+            content.style.maxHeight = content.scrollHeight + "px";
+          }
+        });
+      });
+    });
+  </script>
+</body>
+</html>
