--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     body {
       margin: 0;
       font-family: 'Poppins', sans-serif;
-      background: #ff56c1;
-      color: #000;
+      background: #fff0f5;
+      color: #333;
     }
 
     .screen {
@@ -42,7 +42,7 @@
     }
 
     button {
-      background-color: #00b4d8;
+      background-color: #6db3c1;
       color: #fff;
       border: none;
       padding: 1rem 1.5rem;
@@ -53,7 +53,7 @@
     }
 
     .collapsible {
-      background-color: #0077b6;
+      background-color: #6a88c4;
       color: white;
       cursor: pointer;
       padding: 1rem;
@@ -72,7 +72,7 @@
       max-height: 0;
       overflow: hidden;
       transition: max-height 0.3s ease-out;
-      background: #caf0f8;
+      background: #f4f9ff;
       margin-bottom: 1rem;
       border-radius: 6px;
       text-align: left;
@@ -86,10 +86,21 @@
       display: none;
     }
 
-    iframe {
-      border: none;
-      border-radius: 6px;
+    .video-container {
       margin-top: 1rem;
+      border-radius: 6px;
+      overflow: hidden;
+      background: #ccc;
+      text-align: center;
+      padding: 1rem;
+    }
+
+    .video-container a {
+      display: inline-block;
+      margin-top: 0.5rem;
+      font-weight: bold;
+      color: #0077b6;
+      text-decoration: underline;
     }
   </style>
 </head>
@@ -119,8 +130,11 @@
           <li>“Nooo! Don’t start reading that book out loud!”</li>
         </ul>
         <p><strong>Why it works:</strong> It flips the script in a way that makes your child feel powerful, funny, and successful — all while doing the very thing they were resisting.</p>
-        <iframe src="https://www.dropbox.com/scl/fi/dt2fkqf8a9cqo9422ij4m/3-Playing-the-Opposite.MOV?rlkey=ajxyv6bsszyppx4j10z6mkqtg&raw=1"
-                width="100%" height="250" allowfullscreen></iframe>
+
+        <div class="video-container">
+          <p>▶️ Demo Video:</p>
+          <a href="https://www.dropbox.com/scl/fi/dt2fkqf8a9cqo9422ij4m/3-Playing-the-Opposite.MOV?rlkey=ajxyv6bsszyppx4j10z6mkqtg&raw=1" target="_blank">Watch on Dropbox</a>
+        </div>
       </div>
     </div>
   </div>
