--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <li>Broccoli yelling "Just a trim!"</li>
       <li>Shoes that want to dance</li>
     </ul>
-    <video controls><source src="https://www.dropbox.com/scl/fi/xekp61s8fwm6a3m24as4y/1-Personification.MOV?raw=1" type="video/mp4"></video>
+    <video controls><source src="videos/1 - Personification.mp4" type="video/mp4"></video>
   </div>
 </div>
 <!-- Strategy 2 -->
@@ -122,7 +122,7 @@
       <li>GPS voice giving instructions</li>
       <li>"Volume knob" for behavior</li>
     </ul>
-    <video controls><source src="https://www.dropbox.com/scl/fi/9e95hunyns3lmi5rfctjr/2-Mechanical-Play.MOV?raw=1" type="video/mp4"></video>
+    <video controls><source src="videos/2 - Mechanical Play.mp4" type="video/mp4"></video>
   </div>
 </div>
 <!-- Strategy 3 -->
@@ -135,7 +135,7 @@
       <li>"If you take that medicine, I’ll moo like a cow!"</li>
       <li>"Nooo, don’t smile at me!"</li>
     </ul>
-    <video controls><source src="https://www.dropbox.com/scl/fi/dt2fkqf8a9cqo9422ij4m/3-Playing-the-Opposite.MOV?raw=1" type="video/mp4"></video>
+    <video controls><source src="videos/3 - Playing the Opposite.mp4" type="video/mp4"></video>
   </div>
 </div>
 <!-- Strategy 4 -->
@@ -148,7 +148,7 @@
       <li>Who can blow the biggest bubble?</li>
       <li>Silent screaming challenge</li>
     </ul>
-    <video controls><source src="https://www.dropbox.com/scl/fi/v27d6h2q0hsxirx1pyhvc/4-Challenges-and-Gamifying.MOV?raw=1" type="video/mp4"></video>
+    <video controls><source src="videos/4 - Challenges and Gamifying.mp4" type="video/mp4"></video>
   </div>
 </div>
 <!-- Strategy 5 -->
@@ -161,7 +161,7 @@
       <li>Lotion disappears with a gasp</li>
       <li>Force field until they say "please"</li>
     </ul>
-    <video controls><source src="https://www.dropbox.com/scl/fi/vssi547xf6yuc5fnwchbs/5-Mystery-Magic-and-Confusion.MOV?raw=1" type="video/mp4"></video>
+    <video controls><source src="videos/5 - Mystery Magic and Confusion.mp4" type="video/mp4"></video>
   </div>
 </div>
 <!-- Strategy 6 -->
@@ -174,7 +174,7 @@
       <li>Silent disco transitions</li>
       <li>Toothbrushing jingles</li>
     </ul>
-    <video controls><source src="https://www.dropbox.com/scl/fi/j1comxz5uzuu7uf30axwd/6-Make-it-a-Musical.MOV?raw=1" type="video/mp4"></video>
+    <video controls><source src="videos/6 - Make it a Musical.mp4" type="video/mp4"></video>
   </div>
 </div>
 <!-- Strategy 7 -->
@@ -187,7 +187,7 @@
       <li>Villain trying to vacuum up toys</li>
       <li>Announcer at the “bedtime Olympics”</li>
     </ul>
-    <video controls><source src="https://www.dropbox.com/scl/fi/a512fzy0xvmq1j7ilenzt/7-Characters-and-Role-Play.MOV?raw=1" type="video/mp4"></video>
+    <video controls><source src="videos/7 - Characters and Role Play.mp4" type="video/mp4"></video>
   </div>
 </div>
 <!-- Strategy 8 -->
@@ -200,7 +200,7 @@
       <li>Fortunately/unfortunately games</li>
       <li>Swamp alligator with stinky breath</li>
     </ul>
-    <video controls><source src="https://www.dropbox.com/scl/fi/vffwb8rd5vfsv0359mhxq/8-Storytelling.MOV?raw=1" type="video/mp4"></video>
+    <video controls><source src="videos/8 - Storytelling.mp4" type="video/mp4"></video>
   </div>
 </div>
 <!-- Strategy 9 -->
@@ -213,7 +213,7 @@
       <li>“We’re entering the grocery gauntlet!”</li>
       <li>“Sir Broccoli must save the castle!”</li>
     </ul>
-    <video controls><source src="https://www.dropbox.com/scl/fi/oukwfa8hhzs1mq1k032u8/9-Romanticizing-the-Mundane.MOV?raw=1" type="video/mp4"></video>
+    <video controls><source src="videos/9 - Romanticizing the Mundane.mp4" type="video/mp4"></video>
   </div>
 </div>
 <!-- Strategy 10 -->
@@ -226,7 +226,7 @@
       <li>Blow each other across the room</li>
       <li>Lemon face / orange face</li>
     </ul>
-    <video controls><source src="https://www.dropbox.com/scl/fi/le2sfmwrjttfhwe4c85oz/10-Body-and-Breath.MOV?raw=1" type="video/mp4"></video>
+    <video controls><source src="videos/10 - Body and Breath.mp4" type="video/mp4"></video>
   </div>
 </div>
 <!-- Strategy 11 -->
@@ -239,7 +239,7 @@
       <li>1, 2, 3… FART! instead of "cheese"</li>
       <li>“What have you DONE?!” in goofy voice</li>
     </ul>
-    <video controls><source src="https://www.dropbox.com/scl/fi/q1qbr80kjn3k6rac64lqn/11-General-Nonsense.MOV?raw=1" type="video/mp4"></video>
+    <video controls><source src="videos/11 - General Nonsense.mp4" type="video/mp4"></video>
   </div>
 </div>
 <!-- STRATEGY BLOCKS END -->
