--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <!-- STRATEGY BLOCKS BEGIN -->
 <!-- Strategy 1 -->
 <div class="strategy">
-  <button class="collapsible">🧸 Personification</button>
+  <button class="collapsible"><img src="icons/1.png" alt="Personification icon" style="height: 20px; vertical-align: middle; margin-right: 8px;" />Personification</button>
   <div class="content">
     <p><strong>What it is:</strong> Bringing inanimate objects to life — like a toy, snack, or sock — to redirect energy with silliness.</p>
     <ul>
@@ -114,7 +114,7 @@
 </div>
 <!-- Strategy 2 -->
 <div class="strategy">
-  <button class="collapsible">🤖 Mechanical Play</button>
+  <button class="collapsible"><img src="icons/2.png" alt="Mechanical Play icon" style="height: 20px; vertical-align: middle; margin-right: 8px;" />Mechanical Play</button>
   <div class="content">
     <p><strong>What it is:</strong> Pretending to be a robot, machine, or voice assistant.</p>
     <ul>
@@ -127,7 +127,7 @@
 </div>
 <!-- Strategy 3 -->
 <div class="strategy">
-  <button class="collapsible">🪞 Playing the Opposite</button>
+  <button class="collapsible"><img src="icons/3.png" alt="Playing the Opposite icon" style="height: 20px; vertical-align: middle; margin-right: 8px;" />Playing the Opposite</button>
   <div class="content">
     <p><strong>What it is:</strong> Acting shocked or upset when your child does exactly what you want.</p>
     <ul>
@@ -140,7 +140,7 @@
 </div>
 <!-- Strategy 4 -->
 <div class="strategy">
-  <button class="collapsible">🏆 Challenges & Gamifying</button>
+  <button class="collapsible"><img src="icons/4.png" alt="Challenges & Gamifying icon" style="height: 20px; vertical-align: middle; margin-right: 8px;" />Challenges & Gamifying</button>
   <div class="content">
     <p><strong>What it is:</strong> Turning tasks into a game, challenge, or silly contest.</p>
     <ul>
@@ -153,7 +153,7 @@
 </div>
 <!-- Strategy 5 -->
 <div class="strategy">
-  <button class="collapsible">✨ Magic, Mystery, & Confusion</button>
+  <button class="collapsible"><img src="icons/5.png" alt="Magic, Mystery, & Confusion icon" style="height: 20px; vertical-align: middle; margin-right: 8px;" />Magic, Mystery, & Confusion</button>
   <div class="content">
     <p><strong>What it is:</strong> Pretending something magical or mysterious is happening.</p>
     <ul>
@@ -166,7 +166,7 @@
 </div>
 <!-- Strategy 6 -->
 <div class="strategy">
-  <button class="collapsible">🎶 Make it a Musical</button>
+  <button class="collapsible"><img src="icons/6.png" alt="Make it a Musical icon" style="height: 20px; vertical-align: middle; margin-right: 8px;" />Make it a Musical</button>
   <div class="content">
     <p><strong>What it is:</strong> Turning routines into musical numbers, chants, or dances.</p>
     <ul>
@@ -179,7 +179,7 @@
 </div>
 <!-- Strategy 7 -->
 <div class="strategy">
-  <button class="collapsible">🎭 Characters & Role Play</button>
+  <button class="collapsible"><img src="icons/7.png" alt="Characters & Role Play icon" style="height: 20px; vertical-align: middle; margin-right: 8px;" />Characters & Role Play</button>
   <div class="content">
     <p><strong>What it is:</strong> Taking on a silly persona or letting them do it instead of just giving directions.</p>
     <ul>
@@ -192,7 +192,7 @@
 </div>
 <!-- Strategy 8 -->
 <div class="strategy">
-  <button class="collapsible">📖 Storytelling</button>
+  <button class="collapsible"><img src="icons/8.png" alt="Storytelling icon" style="height: 20px; vertical-align: middle; margin-right: 8px;" />Storytelling</button>
   <div class="content">
     <p><strong>What it is:</strong> Narrating real life like an adventure or telling silly made-up stories.</p>
     <ul>
@@ -205,7 +205,7 @@
 </div>
 <!-- Strategy 9 -->
 <div class="strategy">
-  <button class="collapsible">🌈 Romanticizing the Mundane</button>
+  <button class="collapsible"><img src="icons/9.png" alt="Romanticizing the Mundane icon" style="height: 20px; vertical-align: middle; margin-right: 8px;" />Romanticizing the Mundane</button>
   <div class="content">
     <p><strong>What it is:</strong> Using dramatic, poetic, or VIP language to frame boring stuff as fun or fancy.</p>
     <ul>
@@ -218,7 +218,7 @@
 </div>
 <!-- Strategy 10 -->
 <div class="strategy">
-  <button class="collapsible">💨 Body & Breath</button>
+  <button class="collapsible"><img src="icons/10.png" alt="Body & Breath icon" style="height: 20px; vertical-align: middle; margin-right: 8px;" />Body & Breath</button>
   <div class="content">
     <p><strong>What it is:</strong> Regulating through movement, breathing, or silly physical contact.</p>
     <ul>
@@ -231,7 +231,7 @@
 </div>
 <!-- Strategy 11 -->
 <div class="strategy">
-  <button class="collapsible">🎉 General Nonsense</button>
+  <button class="collapsible"><img src="icons/11.png" alt="General Nonsense icon" style="height: 20px; vertical-align: middle; margin-right: 8px;" />General Nonsense</button>
   <div class="content">
     <p><strong>What it is:</strong> Gibberish, silly voices, fart monsters — for interrupting tension and reconnecting.</p>
     <ul>
